[FIXED HUDSON-5651] Removing excess whitespace from MAVEN_OPTS
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@27559 71c3de6d-444a-0410-be80-ed276b4c234a